[gd_scene load_steps=6 format=3 uid="uid://biiq4jgpap3me"]

[ext_resource type="Texture2D" uid="uid://c7muj60j6akpm" path="res://Button_Backbone.png" id="1_6fikt"]
[ext_resource type="Script" uid="uid://xokjej2e51fp" path="res://Scenes/you_lostl.gd" id="1_gslig"]
[ext_resource type="FontFile" uid="uid://dlnmeytfjcqhk" path="res://Creepster-Regular.ttf" id="2_gpfxe"]
[ext_resource type="Texture2D" uid="uid://d0n5p2ri5e7v8" path="res://Button_Zombie.png" id="3_gslig"]
[ext_resource type="Texture2D" uid="uid://bh8mcm61qnl0o" path="res://Button_Flesh.png" id="5_gslig"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gslig")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -317.0
offset_top = -244.0
offset_right = 323.0
offset_bottom = -68.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_6fikt")

[node name="Label" type="Label" parent="TextureRect"]
layout_mode = 0
offset_left = 2.0
offset_top = 25.0
offset_right = 637.0
offset_bottom = 143.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_constants/outline_size = 20
theme_override_fonts/font = ExtResource("2_gpfxe")
theme_override_font_sizes/font_size = 80
text = "You Lost!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect2" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -181.0
offset_top = -245.0
offset_right = 517.0
offset_bottom = -27.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_gslig")

[node name="Button" type="Button" parent="TextureRect2"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_right = 696.0
offset_bottom = 192.0

[node name="Label" type="Label" parent="TextureRect2"]
layout_mode = 0
offset_top = -4.0
offset_right = 706.0
offset_bottom = 198.0
theme_override_colors/font_color = Color(0.67, 0, 0, 1)
theme_override_constants/outline_size = 17
theme_override_fonts/font = ExtResource("2_gpfxe")
theme_override_font_sizes/font_size = 80
text = "Back to main menu"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect3" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 341.0
offset_top = 395.0
offset_right = 981.0
offset_bottom = 555.0
scale = Vector2(0.7, 0.7)
texture = ExtResource("5_gslig")

[node name="Label" type="Label" parent="TextureRect3"]
layout_mode = 0
offset_left = 32.857143
offset_top = 2.179827e-05
offset_right = 784.8571
offset_bottom = 121.00002
scale = Vector2(0.7714286, 1)
theme_override_colors/font_color = Color(0, 0.74, 0.16033337, 1)
theme_override_constants/outline_size = 15
theme_override_fonts/font = ExtResource("2_gpfxe")
theme_override_font_sizes/font_size = 102
text = "Game mode: normal"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="TextureRect2/Button" to="." method="_on_button_pressed"]
